--- a/frontend/themes/collaboration/styles.css
+++ b/frontend/themes/collaboration/styles.css
@@ -1,3 +1,34 @@
 @import url('./main-layout.css');
 @import url('./views/master-detail-view.css');
 @import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
+
+html {
+  --lumo-font-size: 1rem;
+  --lumo-font-size-xxxl: 1.75rem;
+  --lumo-font-size-xxl: 1.375rem;
+  --lumo-font-size-xl: 1.125rem;
+  --lumo-font-size-l: 1rem;
+  --lumo-font-size-m: 0.875rem;
+  --lumo-font-size-s: 0.8125rem;
+  --lumo-font-size-xs: 0.75rem;
+  --lumo-font-size-xxs: 0.6875rem;
+  --lumo-border-radius: 0px;
+  --lumo-space-xl: 1.875rem;
+  --lumo-space-l: 1.25rem;
+  --lumo-space-m: 0.625rem;
+  --lumo-space-s: 0.3125rem;
+  --lumo-space-xs: 0.1875rem;
+
+  --lumo-primary-text-color: #000000;
+  --lumo-primary-color-50pct: #395900;
+  --lumo-primary-color-10pct: #69a900;
+  --lumo-primary-color: #599900;
+
+  --lumo-error-text-color: rgb(0, 0, 0);
+  --lumo-error-color-50pct: rgba(0, 0, 0, 0.5);
+  --lumo-error-color-10pct: rgba(255, 0, 0, 0.1);
+  --lumo-error-color: rgba(255, 0, 0, 0.9);
+}
+
+[theme~="dark"] {
+}
